# poc-htmx-rust

./: Cargo.toml  README.adoc  index.html
assets/: index.html
backend/: Cargo.toml  README.adoc
backend/assets/: index.html
backend/src/: main.rs
css/: main.css
js/: my-input.js
src/: main.rs
templates/: form.html  home.html  index.html
