[package]
name = "poc-htmx-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
humantime = "2.1.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
